# arsoft-xmpp-daemon

./: .gitignore  CMakeLists.txt  README.md  arsoft-xmpp-daemon.kdev4  version.h.cmake
cmake/: FindSwiften.cmake
config/: daemon.conf
daemon/: CMakeLists.txt  daemon_config.cpp  daemon_config.h  main.cpp  server.cpp  server.h  xhtml_payload.cpp  xmpp_agent.cpp  xmpp_agent.h
daemon/.kdev4/: easyswift.kdev4
debian/: .gitignore  README.Debian  arsoft-xmpp-daemon-setup.upstart  arsoft-xmpp-daemon.default  arsoft-xmpp-daemon.install  arsoft-xmpp-daemon.service  arsoft-xmpp-daemon.socket  arsoft-xmpp-daemon.upstart  changelog  control  copyright  rules
easyswift/: CMakeLists.txt  daemon_config.cpp  daemon_config.h  easyswift.kdev4  main.cpp  server.cpp  server.h  xhtml_payload.h  xmpp_agent.cpp  xmpp_agent.h
easyswift/.kdev4/: easyswift.kdev4
upstart/: arsoft-xmpp-daemon-setup.conf  arsoft-xmpp-daemon.conf
